--- a/src/main/resources/templates/detail_admin.html
+++ b/src/main/resources/templates/detail_admin.html
@@ -35,7 +35,7 @@
 
 <a href="/managebooks/admin/books">
     <div class="square1">
-        <div class="no-logo">添加图书</div>
+        <div class="no-logo">图书管理</div>
     </div>
 </a>
 
