--- a/src/main/resources/templates/admin_addbook.html
+++ b/src/main/resources/templates/admin_addbook.html
@@ -13,7 +13,7 @@
 <body>
 <div th:include="../static/common/headbar::headbar"></div>
 <div th:include="./detail_admin::homepage"></div>
-<div style="padding: 20px 550px 10px">
+<div style="padding: 20px 550px 10px;text-align: center">
     <button class="btn btn-success"
             data-toggle="modal" data-target="#add">添加图书
     </button>
@@ -118,6 +118,103 @@
         </div>
     </div>
 </div>
+
+<div id="update" class="modal fade">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-body">
+                <button class="close" data-dismiss="modal">
+                    <span>&times;</span>
+                </button>
+            </div>
+            <div class="modal-title">
+                <h1 class="text-center">修改图书</h1>
+            </div>
+            <div class="modal-body">
+                <form id="form-update">
+                    <div class="form-group has-feedback">
+                        <label for="ad-isbn">isbn</label>
+                        <div class="input-group">
+                            <span class="input-group-addon"><span class="glyphicon glyphicon-phone"></span></span>
+                            <input id="ad-isbn-update" class="form-control" placeholder="请输入ISBN" maxlength="13" type="text">
+                        </div>
+                        <span style="color:red;display: none;" class="tips"></span>
+                        <span style="display: none;" class="glyphicon glyphicon-remove form-control-feedback"></span>
+                        <span style="display: none;" class="glyphicon glyphicon-ok form-control-feedback"></span>
+                    </div>
+
+                    <div class="form-group has-feedback">
+                        <label for="ad-bname">书名</label>
+                        <div class="input-group">
+                            <span class="input-group-addon"><span class="glyphicon glyphicon-book"></span></span>
+                            <input id="ad-bname-update" class="form-control" placeholder="请输入书名" maxlength="20">
+                        </div>
+
+                        <span style="color:red;display: none;" class="tips"></span>
+                        <span style="display: none;" class="glyphicon glyphicon-remove form-control-feedback"></span>
+                        <span style="display: none;" class="glyphicon glyphicon-ok form-control-feedback"></span>
+                    </div>
+
+                    <div class="form-group has-feedback">
+                        <label for="ad-publisher">出版社</label>
+                        <div class="input-group">
+                            <span class="input-group-addon"><span class="glyphicon glyphicon-info-sign"></span></span>
+                            <input id="ad-publisher-update" class="form-control" placeholder="请输入出版社" maxlength="10">
+                        </div>
+
+                        <span style="color:red;display: none;" class="tips"></span>
+                        <span style="display: none;" class="glyphicon glyphicon-remove form-control-feedback"></span>
+                        <span style="display: none;" class="glyphicon glyphicon-ok form-control-feedback"></span>
+                    </div>
+
+                    <div class="form-group has-feedback">
+                        <label for="ad-writer">作者</label>
+                        <div class="input-group">
+                            <span class="input-group-addon"><span class="glyphicon glyphicon-user"></span></span>
+                            <input id="ad-writer-update" class="form-control" placeholder="请输入作者" maxlength="10">
+                        </div>
+
+                        <span style="color:red;display: none;" class="tips"></span>
+                        <span style="display: none;" class="glyphicon glyphicon-remove form-control-feedback"></span>
+                        <span style="display: none;" class="glyphicon glyphicon-ok form-control-feedback"></span>
+                    </div>
+
+                    <div class="form-group has-feedback">
+                        <label for="ad-ptime">出版时间</label>
+                        <div class="input-group">
+                            <span class="input-group-addon"><span class="glyphicon glyphicon-calendar"></span></span>
+                            <input id="ad-ptime-update" class="form-control" placeholder="请输入出版时间" maxlength="10">
+                        </div>
+
+                        <span style="color:red;display: none;" class="tips"></span>
+                        <span style="display: none;" class="glyphicon glyphicon-remove form-control-feedback"></span>
+                        <span style="display: none;" class="glyphicon glyphicon-ok form-control-feedback"></span>
+                    </div>
+
+                    <div class="form-group has-feedback">
+                        <label for="ad-num">数量</label>
+                        <div class="input-group">
+                            <span class="input-group-addon"><span class="glyphicon glyphicon-plus"></span></span>
+                            <input id="ad-num-update" class="form-control" placeholder="请输入数量" maxlength="4">
+                        </div>
+
+                        <span style="color:red;display: none;" class="tips"></span>
+                        <span style="display: none;" class="glyphicon glyphicon-remove form-control-feedback"></span>
+                        <span style="display: none;" class="glyphicon glyphicon-ok form-control-feedback"></span>
+                    </div>
+
+
+                    <div class="text-right">
+                        <button class="btn btn-primary" type="button" id="btn-update">修改</button>
+                        <button class="btn btn-danger" data-dismiss="modal">取消</button>
+                    </div>
+
+                </form>
+            </div>
+        </div>
+    </div>
+</div>
+
 <div id="delete" class="modal fade">
     <div class="modal-dialog">
         <div class="modal-content">
@@ -166,6 +263,7 @@
                 <th>出版社</th>
                 <th>作者</th>
                 <th>出版时间</th>
+                <th>操作</th>
             </tr>
             </thead>
             <tbody>
@@ -175,6 +273,10 @@
                 <td th:text="${booklist.publisher}"></td>
                 <td th:text="${booklist.writer}"></td>
                 <td th:text="(${booklist.ptime.getYear()}+1900)+'年'"></td>
+                <td>
+                    <button class="btn btn-success" data-toggle="modal" th:value="${booklist}" onclick="updateFrame(this.value)">修改</button>
+                    <!--<button class="btn btn-danger">删除</button>-->
+                </td>
             </tr>
             </tbody>
         </table>
@@ -182,5 +284,25 @@
 </div>
 
 <script src="/static/lib/js/check.js"></script>
+<script type="text/javascript">
+    function updateFrame(booklist) {
+        console.log(booklist)
+        var m = new Map();
+        var words = booklist.split('{')[1].split('}')[0].split(', ')
+        for(var i=0,len=words.length;i<len;i++){
+            var key = words[i].split('=')[0]
+            var value = words[i].split('=')[1];
+            value = value.replace("\'","").replace("\'","");
+            m.set(key, value)
+        }
+        $('#update').modal()
+        $('#ad-isbn-update').attr("value", m.get('isbn'))
+        $('#ad-bname-update').attr("value", m.get('bname'))
+        $('#ad-publisher-update').attr("value", m.get('publisher'))
+        $('#ad-writer-update').attr("value", m.get('writer'))
+        $('#ad-ptime-update').attr("value", m.get('ptime'))
+        $('#ad-num-update').attr("value", m.get('number'))
+    }
+</script>
 </body>
 </html>
