--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -10,19 +10,47 @@
 </head>
 <body>
 <div th:include="../static/common/headbar::headbar"></div>
-<div class="container">
-    <form class="form-signin" action="/managebooks/detail">
-        <img src="/static/lib/images/library.jpeg" alt="leader" height="300" width="300">
-        <h2 class="form-signin-heading" style="text-align: center">登录界面</h2>
-        <label for="username" class="sr-only">用户名</label>
-        <input type="text" class="form-control" placeholder="请输入用户名" required autofocus name="username" id="username">
-        <br>
-        <label for="password" class="sr-only">密码</label>
-        <input type="password" name="password" class="form-control" placeholder="请输入密码" id="password">
-        <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
-    </form>
-</div>
+<div class="login">
+    <div class="container">
+        <div class="introduction">
+                YSHOP单商户B2C电商系统
 
+        </div>
+        <div class="login-form">
+            <form class="form-signin" action="/managebooks/detail">
+                <!--<img src="/static/lib/images/library.jpeg" alt="leader" height="300" width="300">-->
+                <h2 class="form-signin-heading" style="text-align: center">登录界面</h2>
+                <label for="username" class="sr-only">用户名</label>
+                <input type="text" class="form-control" placeholder="请输入用户名" required autofocus name="username" id="username">
+                <br>
+                <label for="password" class="sr-only">密码</label>
+                <input type="password" name="password" class="form-control" placeholder="请输入密码" id="password">
+                <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
+            </form>
+        </div>
+    </div>
+</div>
 
 </body>
 </html>
+
+<style rel="stylesheet/scss" lang="scss">
+    .login {
+        height: 800px;
+        background-size: 100% 100%;
+        background-image:url("../static/lib/images/bg.jpg");
+    }
+
+    .login-form {
+        border-radius: 6px;
+        background: #ffffff;
+        width: 385px;
+        padding: 25px 25px 5px 25px;
+        margin-left: 500px;
+        margin-top: 250px;
+    }
+
+    .introduction {
+        margin-top: 25px;
+    }
+</style>
